<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">


    <Spinner
        android:id="@+id/taxDropDown"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/enterCost2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enterCost2"
        app:layout_constraintTop_toBottomOf="@+id/enterCost2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Tax included:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taxDisp" />

    <TextView
        android:id="@+id/calc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="Calculator"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterCost1"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="EnterCost"
        android:inputType="none|number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipDisp" />

    <TextView
        android:id="@+id/tipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:text="Tip:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipDisp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:hint="$ 0.00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tipText"
        app:layout_constraintTop_toBottomOf="@+id/calc_title" />

    <EditText
        android:id="@+id/enterCost2"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="EnterCost"
        android:inputType="none|number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxDisp" />

    <TextView
        android:id="@+id/taxDisp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="$ 0.00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/tipDropDown" />

    <Spinner
        android:id="@+id/tipDropDown"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/enterCost1"
        app:layout_constraintTop_toBottomOf="@+id/enterCost1" />

    <Button
        android:id="@+id/btn_tip"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClick_tip"
        android:text="Tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enterCost1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tax"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClick_tax"
        android:text="TAX"
        app:layout_constraintBottom_toBottomOf="@+id/enterCost2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enterCost2"
        app:layout_constraintTop_toTopOf="@+id/enterCost2" />

    <TextView
        android:id="@+id/taxPercDisp"
        android:layout_width="wrap_content"
        android:layout_height="43sp"
        android:hint="tax (%)"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/taxDropDown"
        app:layout_constraintEnd_toEndOf="@+id/btn_tax"
        app:layout_constraintStart_toStartOf="@+id/btn_tax" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Tip % :"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipDropDown"
        app:layout_constraintEnd_toStartOf="@+id/tipDropDown"
        app:layout_constraintStart_toStartOf="@+id/enterCost1"
        app:layout_constraintTop_toBottomOf="@+id/enterCost1" />

</androidx.constraintlayout.widget.ConstraintLayout>